Fixed clipping to large letters in page title.

--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
@@ -138,4 +138,5 @@ main.mdl-layout__content {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: pre;
+	line-height: 1.1em;
 }
